--- a/project/Makefile
+++ b/project/Makefile
@@ -9,7 +9,7 @@ BINDIR = bin
 SOURCEDIR = source
 RELDIR = rel
 COMP = gcc
-BINOBJS = ${BINDIR}/main.o ${BINDIR}/linkedqueue.o ${BINDIR}/arrayqueue.o ${BINDIR}/memorymappedqueue.o
+BINOBJS = ${BINDIR}/main.o ${BINDIR}/linkedqueue.o ${BINDIR}/arrayqueue.o ${BINDIR}/mmqueue.o
 MAIN = ${RELDIR}/main
 COMPFLAGS = -Wall -O2
 LINKFLAGS =
